// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLink renders nav link with external link 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "nav-link external",
      "href": "https://react.docschina.org/",
      "rel": "noopener noreferrer",
      "target": "_blank",
    },
    "children": Array [
      Object {
        "data": "React",
        "next": Object {
          "attribs": Object {
            "aria-hidden": "true",
            "class": "icon outbound",
            "height": "15",
            "viewBox": "0 0 100 100",
            "width": "15",
            "x": "0px",
            "xmlns": "http://www.w3.org/2000/svg",
            "y": "0px",
          },
          "children": Array [
            Object {
              "attribs": Object {
                "d": "M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z",
                "fill": "currentColor",
              },
              "children": Array [],
              "name": "path",
              "namespace": "http://www.w3.org/2000/svg",
              "next": Object {
                "attribs": Object {
                  "fill": "currentColor",
                  "points": "45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9",
                },
                "children": Array [],
                "name": "polygon",
                "namespace": "http://www.w3.org/2000/svg",
                "next": null,
                "parent": [Circular],
                "prev": [Circular],
                "type": "tag",
                "x-attribsNamespace": Object {
                  "fill": undefined,
                  "points": undefined,
                },
                "x-attribsPrefix": Object {
                  "fill": undefined,
                  "points": undefined,
                },
              },
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {
                "d": undefined,
                "fill": undefined,
              },
              "x-attribsPrefix": Object {
                "d": undefined,
                "fill": undefined,
              },
            },
            Object {
              "attribs": Object {
                "fill": "currentColor",
                "points": "45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9",
              },
              "children": Array [],
              "name": "polygon",
              "namespace": "http://www.w3.org/2000/svg",
              "next": null,
              "parent": [Circular],
              "prev": Object {
                "attribs": Object {
                  "d": "M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z",
                  "fill": "currentColor",
                },
                "children": Array [],
                "name": "path",
                "namespace": "http://www.w3.org/2000/svg",
                "next": [Circular],
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {
                  "d": undefined,
                  "fill": undefined,
                },
                "x-attribsPrefix": Object {
                  "d": undefined,
                  "fill": undefined,
                },
              },
              "type": "tag",
              "x-attribsNamespace": Object {
                "fill": undefined,
                "points": undefined,
              },
              "x-attribsPrefix": Object {
                "fill": undefined,
                "points": undefined,
              },
            },
          ],
          "name": "svg",
          "namespace": "http://www.w3.org/2000/svg",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "aria-hidden": undefined,
            "class": undefined,
            "height": undefined,
            "viewBox": undefined,
            "width": undefined,
            "x": undefined,
            "xmlns": "http://www.w3.org/2000/xmlns/",
            "y": undefined,
          },
          "x-attribsPrefix": Object {
            "aria-hidden": undefined,
            "class": undefined,
            "height": undefined,
            "viewBox": undefined,
            "width": undefined,
            "x": undefined,
            "xmlns": "",
            "y": undefined,
          },
        },
        "parent": [Circular],
        "prev": null,
        "type": "text",
      },
      Object {
        "attribs": Object {
          "aria-hidden": "true",
          "class": "icon outbound",
          "height": "15",
          "viewBox": "0 0 100 100",
          "width": "15",
          "x": "0px",
          "xmlns": "http://www.w3.org/2000/svg",
          "y": "0px",
        },
        "children": Array [
          Object {
            "attribs": Object {
              "d": "M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z",
              "fill": "currentColor",
            },
            "children": Array [],
            "name": "path",
            "namespace": "http://www.w3.org/2000/svg",
            "next": Object {
              "attribs": Object {
                "fill": "currentColor",
                "points": "45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9",
              },
              "children": Array [],
              "name": "polygon",
              "namespace": "http://www.w3.org/2000/svg",
              "next": null,
              "parent": [Circular],
              "prev": [Circular],
              "type": "tag",
              "x-attribsNamespace": Object {
                "fill": undefined,
                "points": undefined,
              },
              "x-attribsPrefix": Object {
                "fill": undefined,
                "points": undefined,
              },
            },
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "d": undefined,
              "fill": undefined,
            },
            "x-attribsPrefix": Object {
              "d": undefined,
              "fill": undefined,
            },
          },
          Object {
            "attribs": Object {
              "fill": "currentColor",
              "points": "45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9",
            },
            "children": Array [],
            "name": "polygon",
            "namespace": "http://www.w3.org/2000/svg",
            "next": null,
            "parent": [Circular],
            "prev": Object {
              "attribs": Object {
                "d": "M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z",
                "fill": "currentColor",
              },
              "children": Array [],
              "name": "path",
              "namespace": "http://www.w3.org/2000/svg",
              "next": [Circular],
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {
                "d": undefined,
                "fill": undefined,
              },
              "x-attribsPrefix": Object {
                "d": undefined,
                "fill": undefined,
              },
            },
            "type": "tag",
            "x-attribsNamespace": Object {
              "fill": undefined,
              "points": undefined,
            },
            "x-attribsPrefix": Object {
              "fill": undefined,
              "points": undefined,
            },
          },
        ],
        "name": "svg",
        "namespace": "http://www.w3.org/2000/svg",
        "next": null,
        "parent": [Circular],
        "prev": Object {
          "data": "React",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "text",
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "aria-hidden": undefined,
          "class": undefined,
          "height": undefined,
          "viewBox": undefined,
          "width": undefined,
          "x": undefined,
          "xmlns": "http://www.w3.org/2000/xmlns/",
          "y": undefined,
        },
        "x-attribsPrefix": Object {
          "aria-hidden": undefined,
          "class": undefined,
          "height": undefined,
          "viewBox": undefined,
          "width": undefined,
          "x": undefined,
          "xmlns": "",
          "y": undefined,
        },
      },
    ],
    "name": "a",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
      "href": undefined,
      "rel": undefined,
      "target": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
      "href": undefined,
      "rel": undefined,
      "target": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`NavLink renders nav link with internal link 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "aria-current": "page",
      "class": "router-link-active",
      "href": "/",
    },
    "children": Array [
      Object {
        "data": "mdpress",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "text",
      },
    ],
    "name": "a",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "aria-current": undefined,
      "class": undefined,
      "href": undefined,
    },
    "x-attribsPrefix": Object {
      "aria-current": undefined,
      "class": undefined,
      "href": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;
